--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <hr class="my-4"> 
       <div class="lead" id="search-key"></div>
       <p class="lead"> 
+        <p> Please type in any animal name</p>
         <input type="text" id="input">
         <a class="btn btn-primary btn-lg" href="#" role="button" id="submit">submit</a>
       </p>
